# aoe2-live-standings-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 10a39d29689c_rekey_live_streams_on_tournament_player_.py  1b245516564e_add_idempotency_keys_table.py  1b4c7991f59a_expand_tournament_players_drop_xor_.py  402ee822d8f4_add_nudge_versions_table.py  41ce2470a690_add_tournament_placeholder_players_table.py  4582eb589b88_add_presentation_bag_to_tournaments.py  54e868090062_replace_stream_url_with_presentation_.py  6004c789de1b_add_profile_aliases_table.py  61eb825d1551_add_end_date_alongside_grand_finals_date.py  64de51a43607_add_host_stream_urls_and_host_live_.py  75c172c71c39_unify_tournament_players_to_allow_.py  8d202f1202b0_add_leaderboards_table.py  93e6858602db_add_tournament_owners_table.py  945052f82359_contract_team_members_to_tournament_.py  94c456d362d6_add_fan_allocations_table_and_.py  a7d2f049b534_initial_schema_players_ratings_matches_.py  abcecb2ba592_add_player_rating_snapshots.py  abefba0d04b8_add_prize_pool_cents_to_tournaments.py  ade9ce0a25d8_contract_tournament_players_name_not_.py  b7a7ce86e441_drop_grand_finals_date_from_tournaments.py  b9e6b1a2dffb_add_live_match_players_table.py  bd2d6eef00e8_add_is_captain_to_team_members.py  (+13 more)
app/: audit.py  cache.py  config.py  database.py  errors.py  events.py  features.py  leaderboards_cache.py  limiting.py  logging.py  main.py  sentry.py  telemetry.py
docs/: api-design.md  data-sources.md  deploy-freeze.md  event-traffic-cost-model.md  launch-lessons-learned.md  players.md
infra/: README.md
tests/: conftest.py  test_app.py  test_audit.py  test_auth.py  test_errors.py  test_events.py  test_idempotency.py  test_logging.py  test_models.py  test_notes.py  test_poller_status.py  test_roles.py  test_sentry.py  test_settings_validation.py  test_users_client.py
(+107 files in other folders)
